samples/_failures_safe/1761088519_753a00_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9040f1a.c: In function ‘main’:
./samples/SAFE/__tmp_d9040f1a.c:161:10: error: ‘EV’ undeclared (first use in this function)
  161 |         {EV
      |          ^~
./samples/SAFE/__tmp_d9040f1a.c:161:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d9040f1a.c:162: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_d9040f1a.c:161:9: note: to match this ‘{’
  161 |         {EV
      |         ^
./samples/SAFE/__tmp_d9040f1a.c:161:9: error: expected declaration or statement at end of input
